feat(nm): add NetworkManager VPN service plugin
Introduce the nm-snx-service workspace app that implements the VPN Plugin D-Bus
interface, handles authentication challenges, and reports tunnel state back to
NetworkManager. Wire it into Cargo metadata, lock in all required async/glib
dependencies, and provide helper scripts plus policy/service/descriptors to
install and expose the plugin daemon.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/snxcore", "crates/i18n", "apps/snxctl", "apps/snx-rs", "apps/snx-rs-gui"]
+members = ["crates/snxcore", "crates/i18n", "apps/snxctl", "apps/snx-rs", "apps/snx-rs-gui", "apps/nm-snx-service", "apps/nm-snx-auth-dialog"]
 resolver = "2"
 
 [workspace.package]
