--- a/apps/nm-snx-auth-dialog/Cargo.toml
+++ b/apps/nm-snx-auth-dialog/Cargo.toml
@@ -18,3 +18,5 @@ anyhow = "1"
 snxcore = { path = "../../crates/snxcore" }
 directories-next = "2.0"
 base64 = "0.22"
+tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
+secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
