--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -yqq build-essential pkg-config libssl-dev libgtk-4-dev libwebkitgtk-6.0-dev
+          sudo apt-get install -yqq build-essential pkg-config libssl-dev libgtk-4-dev libwebkitgtk-6.0-dev libnm-dev libadwaita-1-dev
       - name: Install Rust compiler
         run: |
           rustup update
