--- a/apps/nm-snx-auth-dialog/Cargo.toml
+++ b/apps/nm-snx-auth-dialog/Cargo.toml
@@ -9,8 +9,8 @@ repository.workspace = true
 publish.workspace = true
 
 [dependencies]
-gtk4 = { version = "0.10", features = ["v4_12"] }
-libadwaita = { version = "0.8", features = ["v1_5"] }
+gtk4 = "0.10"
+libadwaita = "0.8"
 libnm = "0.2"
 getopt = "1.0"
 glib = "0.20"
