fix: nm police conf

--- a/package/nm/nm-snx.conf
+++ b/package/nm/nm-snx.conf
@@ -2,10 +2,19 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
   <policy user="root">
+    <!-- Allow owning the base service name -->
     <allow own="org.freedesktop.NetworkManager.snx"/>
+    <!-- Allow owning dynamic connection-specific names (e.g., Connection_10) -->
+    <allow own_prefix="org.freedesktop.NetworkManager.snx"/>
+    <!-- Allow sending to base service -->
     <allow send_destination="org.freedesktop.NetworkManager.snx"/>
+    <!-- Allow sending to connection-specific services -->
+    <allow send_destination_prefix="org.freedesktop.NetworkManager.snx"/>
   </policy>
   <policy context="default">
+    <!-- Allow any user to send messages to the service -->
     <allow send_destination="org.freedesktop.NetworkManager.snx"/>
+    <!-- Allow sending to connection-specific services -->
+    <allow send_destination_prefix="org.freedesktop.NetworkManager.snx"/>
   </policy>
 </busconfig>
