--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,8 +3,14 @@ name: Create Release on Tag
 on:
   push:
     tags:
-      - 'v*.*.*'
-      - 'v*.*.*-test'
+      - "v*.*.*"
+      - "v*.*.*-test"
+  workflow_dispatch:
+    inputs:
+      test_tag:
+        description: "Dummy tag for testing (must end in -test to avoid polluting the repo)"
+        required: false
+        default: "v0.0.0-test"
 
 permissions:
   contents: write
@@ -17,28 +23,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.ref }}
+          fetch-depth: 0
 
       - name: Extract changelog for tag
         id: changelog
         run: |
-          TAG_NAME=$(echo ${{ github.ref_name }})
+          TAG_NAME=${{ inputs.test_tag || github.ref_name }}
+
+          if [[ "$TAG_NAME" == "main" || "$TAG_NAME" == "master" ]]; then
+            TAG_NAME="v0.0.0-test"
+          fi
+
+          if ! git rev-parse "$TAG_NAME" >/dev/null 2>&1; then
+            echo "Creating local tag $TAG_NAME for packaging scripts"
+            git tag "$TAG_NAME"
+          fi
+
           VERSION_NAME=$(echo $TAG_NAME | sed 's/^v//;s/-test//')
           VERSION_HEADER=$(echo $TAG_NAME | sed 's/-test//')
+
           echo "Extracting changelog for tag: $TAG_NAME"
 
-          # Find the changelog section for this tag
           CHANGELOG=$(awk -v tag="## $VERSION_HEADER " '$0 ~ tag {flag=1; next} /^## / && flag {flag=0} flag && /^-/ {print}' CHANGELOG.md)
 
           if [ -z "$CHANGELOG" ]; then
-            echo "No changelog entries found for $TAG_NAME"
-            exit 1
+            if [[ "$TAG_NAME" == *"-test"* ]]; then
+              CHANGELOG="Test build: Automaticaly generated notes for $TAG_NAME"
+            else
+              echo "Error: No changelog entries found for $TAG_NAME"
+              exit 1
+            fi
           fi
 
-          # Format release notes
-          RELEASE_NOTES="$CHANGELOG"
           echo "release_notes<<EOF" >> $GITHUB_ENV
-          echo "$RELEASE_NOTES" >> $GITHUB_ENV
+          echo "$CHANGELOG" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
           echo "tag_name=$TAG_NAME" >> $GITHUB_ENV
           echo "version_name=$VERSION_NAME" >> $GITHUB_ENV
@@ -46,28 +64,43 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y pkg-config libssl-dev libgtk-4-dev makeself libwebkitgtk-6.0-dev rpm fakeroot
+          sudo apt-get install -y pkg-config libssl-dev libgtk-4-dev makeself libwebkitgtk-6.0-dev rpm fakeroot libadwaita-1-dev libnm-dev meson
 
       - name: Install Rust
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           source $HOME/.cargo/env
 
-      - name: Build project
+      # - name: Build project
+      #   run: |
+      #     chmod +x package/build-lto.sh
+      #     ./package/build-lto.sh --features=vendored-openssl,vendored-sqlite
+
+      # - name: Package project
+      #   run: |
+      #     chmod +x package/package.sh
+      #     ./package/package.sh
+
+      # - name: Build project with mobile-access feature
+      #   run: ./package/build-lto.sh --features=vendored-openssl,vendored-sqlite,mobile-access
+
+      # - name: Package project with mobile-access feature
+      #   run: ./package/package.sh -webkit
+
+      - name: Build NetworkManager plugin
         run: |
-          chmod +x package/build-lto.sh
-          ./package/build-lto.sh --features=vendored-openssl,vendored-sqlite
+          chmod +x package/build-nm-plugin.sh
+          ./package/build-nm-plugin.sh
 
-      - name: Package project
+      - name: Package NetworkManager plugin
         run: |
-          chmod +x package/package.sh
-          ./package/package.sh
+          chmod +x package/package-nm-plugin-deb.sh
+          TAG_NAME=${{ env.tag_name }} ./package/package-nm-plugin-deb.sh
 
-      - name: Build project with mobile-access feature
-        run: ./package/build-lto.sh --features=vendored-openssl,vendored-sqlite,mobile-access
-
-      - name: Package project with mobile-access feature
-        run: ./package/package.sh -webkit
+      - name: List generated packages
+        run: |
+          echo "Looking for .deb files in target/:"
+          ls -la target/*.deb || echo "No .deb files found"
 
       - name: Create Release
         uses: actions/github-script@v7
@@ -80,7 +113,7 @@ jobs:
             const releaseNotes = process.env.release_notes;
             const extensions = ["tar.xz", "run", "deb", "rpm"];
             const suffixes = ["", "-webkit"];
-            
+
             const release = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -91,22 +124,17 @@ jobs:
               prerelease: false
             });
 
-            for (const suffix of suffixes) {
-              for (const extension of extensions) {
-                if ((extension === "deb" || extension === "rpm") && suffix === "-webkit") continue;
-            
-                const artifactName = `snx-rs-${tagName}${suffix}-linux-x86_64.${extension}`;
-                const artifactPath = `target/${artifactName}`;
-                const artifact = fs.readFileSync(artifactPath);
-                await github.rest.repos.uploadReleaseAsset({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  release_id: release.data.id,
-                  name: artifactName,
-                  data: artifact
-                });
-              }
-            }
+            // Upload NetworkManager plugin .deb
+            const nmPluginName = `networkmanager-snx-${tagName}-linux-x86_64.deb`;
+            const nmPluginPath = `target/${nmPluginName}`;
+            const nmPlugin = fs.readFileSync(nmPluginPath);
+            await github.rest.repos.uploadReleaseAsset({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              release_id: release.data.id,
+              name: nmPluginName,
+              data: nmPlugin
+            });
 
             if (tagName.endsWith("-test")) {
               await github.rest.repos.deleteRelease({
