--- a/apps/nm-snx-auth-dialog/Cargo.toml
+++ b/apps/nm-snx-auth-dialog/Cargo.toml
@@ -9,14 +9,6 @@ repository.workspace = true
 publish.workspace = true
 
 [dependencies]
-gtk4 = { version = "0.10", features = ["v4_12"] }
-libadwaita = { version = "0.8", features = ["v1_6"] }
-libnm = "0.2"
-getopt = "1.0"
-glib = "0.20"
+gtk4 = "0.10"
+libadwaita = "0.8"
 anyhow = "1"
-snxcore = { path = "../../crates/snxcore" }
-directories-next = "2.0"
-base64 = "0.22"
-tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
-secret-service = { version = "4", features = ["rt-tokio-crypto-rust"] }
